DemoStreamAPIё